[project]
name = "psr-nsr-repro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "latex2sympy2>=1.9.1",
    "tensordict==0.7.2",
    "vllm==0.8.2",
    "flash-attn; sys_platform != 'darwin'"
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
