# -------------------------------
# build-system
# -------------------------------
[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

# -------------------------------
# project (PEP 621 metadata)
# -------------------------------
[project]
name = "verl"
version = "0.0.0"  # Dummy value; actual version is dynamic
description = "verl: Volcano Engine Reinforcement Learning for LLM"
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"

dependencies = []

[project.optional-dependencies]
# dev = ["ruff", "pytest", "ipython"]

# -------------------------------
# tool.ruff - Linting configuration
# -------------------------------
[tool.ruff]
line-length = 300  # TODO: Reduce this to a more reasonable value

[tool.ruff.lint]
isort = {known-first-party = ["verl"]}
select = ["E", "F", "UP", "B", "I", "G"]
ignore = ["F405", "F403", "E731", "B007", "UP032", "UP007", "G004"]

# -------------------------------
# tool.setuptools - Additional config
# -------------------------------
[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
verl = [
  "version/*",
  "trainer/config/*.yaml"
]

[tool.setuptools.dynamic]
version = {file = "verl/version/version"}
